fix layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 :root {
    --nigeria-green: #0f9366;
+   --bg-green-200: #f7fff7;
    --background-green: #f5fff5;
+
 }
 
 html,
@@ -14,8 +16,8 @@ body {
 }
 
 
-#Hero,
-#Image-gallery,
+.hero-wrapper,
+.image-gallery-wrapper,
 #about,
 #How-it-works,
 #Latest-news,
@@ -47,7 +49,13 @@ body {
    color: green;
 }
 
+
+
 /* NAVBAR  */
+
+#Nav {
+   background-color: var(--bg-green-200);
+}
 
 .nav-link:hover {
    box-shadow: 0 2px var(--nigeria-green);
@@ -76,6 +84,9 @@ body {
    display: flex !important;
    flex-direction: column;
    align-items: center;
+   background-color: var(--bg-green-200);
+   padding-top: 80px;
+   padding-bottom: 40px;
 }
 
 .hero-wrapper>h2,
@@ -97,13 +108,14 @@ h6 {
 /* TOP IMAGE GALLERY */
 
 .image-gallery-wrapper {
+   background-color: var(--bg-green-200);
    box-sizing: border-box;
    display: grid;
    grid-template-columns: repeat(4, 20%);
-   grid-template-rows: 160px;
+   grid-template-rows: 200px;
    gap: 16px;
-   padding: 10px;
    justify-content: center;
+   padding-bottom: 80px;
 }
 
 .image-gallery-item {
@@ -115,22 +127,7 @@ h6 {
    margin-top: 22px;
 }
 
-/* Mobile devicex */
-@media (max-width: 480px) {
 
-   .image-gallery-left,
-   .image-gallery-right {
-      justify-content: center !important;
-      align-items: center;
-      flex-direction: column;
-   }
-
-   .image-gallery-item {
-      margin: 10px 0 !important;
-      width: 240px;
-   }
-
-}
 
 /* For tablets */
 @media (max-width: 769px) {
@@ -138,7 +135,34 @@ h6 {
       display: grid;
       grid-template-columns: repeat(2, 180px);
       grid-template-rows: repeat(2, 180px);
+      padding: 10px;
    }
+}
+
+/* Mobile devicex */
+@media (max-width: 481px) {
+
+   .image-gallery-wrapper {
+      grid-template-columns: auto;
+      grid-template-rows: repeat(4, 180px);
+   }
+
+   .cta-btn {
+      padding: 12px;
+   }
+
+   /* .image-gallery-left,
+   .image-gallery-right {
+      justify-content: center !important;
+      align-items: center;
+      flex-direction: column !important;
+   } */
+
+   .image-gallery-item {
+      margin: 10px 0 !important;
+      width: 240px;
+   }
+
 }
 
 /********** TOP IMAGE GALLERY ENDS **********/
@@ -177,16 +201,17 @@ h6 {
    padding-top: 20px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
    .about-right {
       max-width: 400px;
    }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 769px) {
    .about-right {
       max-width: 500px;
    }
+
    .about-us-wrapper {
       grid-template-columns: auto;
       justify-content: center;
@@ -251,11 +276,12 @@ section>h2 {
 }
 
 /* For tablets */
-@media (max-width: 768px) {
+@media (max-width: 769px) {
 
    .hiw-wrapper {
       grid-template-columns: auto auto;
    }
+
    .hiw-item>.card-body>.card-text {
       font-size: 10px;
    }
@@ -275,7 +301,8 @@ section>h2 {
 /* ********* LATEST NEWS ********* */
 
 #Latest-news {
-   padding-bottom: 40px;
+   padding-bottom: 80px;
+   padding-bottom: 80px;
 }
 
 .news-item-wrapper {
@@ -318,7 +345,7 @@ section>h2 {
 }
 
 /* For tablets*/
-@media (max-width: 768px) {
+@media (max-width: 769px) {
    .news-item-wrapper {
       grid-template-columns: auto;
    }
@@ -331,12 +358,12 @@ section>h2 {
 #Video {
    background-color: var(--background-green);
    padding-top: 40px;
-   padding-bottom: 40px;
+   padding-bottom: 100px;
 }
 
 .videos-wrapper {
    display: grid;
-   grid-template-columns: 30% 30% 30%;
+   grid-template-columns: repeat(3, 32.5%);
    border: 20px;
    gap: 15px;
    justify-content: center;
@@ -359,7 +386,7 @@ section>h2 {
 
 iframe {
    width: 100%;
-   height: 210px;
+   height: 230px;
    border-radius: 20px;
 }
 
@@ -367,7 +394,7 @@ iframe {
    padding-top: 40px;
    padding-bottom: 40px;
    display: grid;
-   grid-template-columns: 33.33% 33.33% 33.33%;
+   grid-template-columns: repeat(3, 32.5%);
    gap: 15px;
    justify-content: center;
 }
@@ -385,21 +412,21 @@ iframe {
 
 .info {
    padding: 10px 8px;
-   border-bottom: 1px solid #535353;
+   border-bottom: 1px solid gray;
    font-size: 15px;
 }
 
 .info-item {
    display: flex;
    flex-direction: column;
-   padding: 12px;
+   /* padding: 12px; */
 }
 
 .info-item:last-child {
    border-bottom: none;
 }
 
-.info-item> a {
+.info-item>a {
    text-decoration: none;
    color: black;
 }
